Setup basic files to set the game scene.

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,16 @@ typings/
 
 # next.js build output
 .next
+
+# MacOSX internal tracking
+.DS_Store
+
+# DigitalOcean generated directory
+v8-compile-cache-0
+
+# Game build
+build/
+/npm-debug.log
+
+# Firebase cache
+.firebase/
